UPDATE: CLO-3769 - Attempt to fix IBM Java tests in trunk-4-0.
git-svn-id: https://svn.javlin.eu/svn/cloveretl.opensource/trunk-4-0@16098 a09ad3ba-1a0f-0410-b1b9-c67202f10d70